# SIREDANE

./: CONFIGURACION_ORACLE_EXTERNO.md  CONFIGURACION_ORACLE_PRODUCCION.md  Dockerfile.airflow  Dockerfile.fastapi  Dockerfile.fastapi.oracle  INSTRUCCIONES_ORACLE_PRODUCCION.md  INSTRUCCIONES_SOLUCION_DUPLICADOS.md  README.md  docker-compose.oracle.prod.yml  docker-compose.oracle.yml  docker-compose.postgresql.yml  pyproject.toml  requirements.txt
FastAPI/: Main.py  Main_oracle.py  Main_sqlite.py
FastAPI/utils/: models.py  schemas.py  utils.py  utils_oracle.py  utils_sqlite.py
airflow_dags/: dag_sire_etl_complete.py  dag_sire_etl_oracle.py  dag_sire_etl_real.py  dag_sire_etl_simple.py  dag_sire_etl_with_api.py  test_dag.py
config/: dev.oracle.env  dev.postgresql.env  prod.oracle.env
docs/: DATABASE_CONFIGURATION.md  README.md  SIRE_Documentacion_Unificada.docx
docs/methodology/: data-governance.md  data-vault-2.0.md  etl-processes.md
docs/technical/: airflow-dags.md  architecture.md  database-configuration.md  docker-containers.md  fastapi-api.md  pyspark-jobs.md  sql-scripts.md
docs/user/: installation-guide.md  oracle-external-deployment.md  troubleshooting.md  user-guide.md
scripts_oracle/: quick_test.py  setup_oracle_prod.py  setup_oracle_structure.py  test_oracle_connection.py  test_oracle_prod.py
scripts_sql/oracle/: check_and_create_structure.sql  cleanup_duplicates.sql  control_ids_generados.sql  create_schemas.sql  create_user_docker_oracle.sql  init_minimal.sql  migrate_to_control_table.sql  sire_dv_tables.sql  sire_obt_tables.sql  (+1 more)
(+25 files in other folders)
